--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -37,6 +37,10 @@
   </div>
 
   <div class="right-mypage">
+    <%# グラフタイトル %>
+    <div class="graph-title">
+      Weight Graph
+    </div>
     <%# グラフに関するグループ %>
     <div class="graph-all">
       <div class="weight-graph">
