--- a/app/assets/stylesheets/weights.scss
+++ b/app/assets/stylesheets/weights.scss
@@ -1,3 +1,9 @@
+.graph-title {
+  padding-top: 2%;
+  font-weight: normal;
+  font-size: 35px;
+}
+
 .graph-all {
   height: 100%;
   // ーーグラフのスタイルーー
