--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -38,22 +38,28 @@
   
   <%# ーーーCalendarページーーー %>
   <div class="right-mypage">
-    <div class="calendar-all">
-      <p id="notice"><%= notice %></p>
+    <div class="calendar-index">
+      <div class="top-title">
+        <div class="title">My Calendar</div>
+        <div id="notice"><%= notice %></div>
+      </div>
+      
+      <%# ーーーCalendar投稿ページに遷移ーーー %>
+      <div class="new-path">
+        <%= link_to 'Write a Diary', new_blog_path %>
+      </div>
+      
+      <div class="calendar-field">
+        <%= month_calendar events: @blogs do |date, blogs| %>
+          <%= date.day %>
 
-      <h1>My Calendar</h1>
-
-      <%= link_to 'Write a Diary', new_blog_path %>
-
-      <%= month_calendar events: @blogs do |date, blogs| %>
-        <%= date.day %>
-
-        <% blogs.each do |blog| %>
-          <div>
-            <%= link_to blog.title, blog %>
-          </div>
+          <% blogs.each do |blog| %>
+            <div>
+              <%= link_to blog.title, blog %>
+            </div>
+          <% end %>
         <% end %>
-      <% end %>
+      </div>
     </div>
   </div>
 </div>
