--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -38,41 +38,40 @@
 
   <div class="right-mypage">
     <%# ーーーCalendar投稿ーーー %>
-    <div class="calendar-new-title">
-      Write a Diary
-    </div>
-    <div class="blog-new">
-      <%= form_with(model: @blog, local: true, class:"blog-form") do |form| %>
-      
-      <div class="blog-title">
-          <%= form.label :title, class:"label-title" %>
-          <div class="title-style">
-          <span class="title-span"></span>
-          <%= form.text_field :title, autocomplete:"off", class:"field-title",placeholder:"20文字以内" %>
+      <div class="calendar-new-title">
+        Write a Diary
+      </div>
+    <div class="calendar-new">
+      <div class="blog-new">
+        <%= form_with(model: @blog, local: true, class:"blog-form") do |form| %>
+        
+        <div class="blog-title">
+            <%= form.label :title, class:"label-title" %>
+            <div class="title-style">
+            <span class="title-span"></span>
+            <%= form.text_field :title, autocomplete:"off", class:"field-title",placeholder:"20文字以内" %>
+          </div>
         </div>
-      </div>
 
-      <div class="blog-content">
-        <%= form.label :content, class:"label-content" %>
-          <div class="content-style">
-            <span class="content-dot1"></span>
-            <span class="content-dot2"></span>
-            <%= form.text_area :content, autocomplete:"off", class:"field-content" %>
-          </div>
+        <div class="blog-content">
+          <%= form.label :content, class:"label-content" %>
+            <div class="content-style">
+              <%= form.text_area :content, autocomplete:"off", class:"field-content" %>
+            </div>
+        </div>
+          <div class="blog-time">
+            <%= form.label :start_time, class:"label-time" %>
+            <div class="time-style">
+              <span class="time-span"></span>
+              <%= form.datetime_select :start_time, class:"field-time" %>
+            </div>
+        </div>
+        <div class="blog-button">
+          <span class="btn-span"></span>
+          <%= form.submit id:"blog-submit"%>
+        </div>
+        <% end %>
       </div>
-        <div class="blog-time">
-          <%= form.label :start_time, class:"label-time" %>
-          <div class="time-style">
-            <span class="time-span"></span>
-            <%= form.datetime_select :start_time, class:"field-time" %>
-          </div>
-      </div>
-      <div class="blog-button">
-        <span class="btn-span"></span>
-        <%= form.label "Post", for:"blog-submit", class:"blog-btn" %>
-        <%= form.submit id:"blog-submit"%>
-      </div>
-      <% end %>
     </div>
   </div>
 </div>
