--- a/app/assets/stylesheets/tweets/tweets.scss
+++ b/app/assets/stylesheets/tweets/tweets.scss
@@ -3,7 +3,7 @@ a {
 }
 // ツイートのスタイル
 #global-container{
-  background-image: url("/assets/kirei.jpg");
+  background-image: image-url("/assets/kirei.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
