--- a/app/assets/stylesheets/tweets/tweets.css
+++ b/app/assets/stylesheets/tweets/tweets.css
@@ -3,7 +3,7 @@ a {
 }
 
 #global-container {
-  background-image: image-url("/assets/kirei.jpg");
+  background-image: url("/assets/kirei.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
