--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -47,9 +47,9 @@
         <li><span class="char">M</span><span class="char">y</span><span class="char">&nbsp;</span><span class="char">P</span><span class="char">a</span><span class="char">g</span><span class="char">e</span></li>
       <% end %>
       <% else %>
-      <%= link_to new_user_session_path do %>
-        <li><span class="char">S</span><span class="char">i</span><span class="char">g</span><span class="char">n</span><span class="char">&nbsp;</span><span class="char">i</span><span class="char">n</span></li>
-      <% end %>
+      <%# <%= link_to new_user_session_path do %>
+        <%# <li><span class="char">S</span><span class="char">i</span><span class="char">g</span><span class="char">n</span><span class="char">&nbsp;</span><span class="char">i</span><span class="char">n</span></li> %>
+      <%# <% end %> 
     <% end %>
     
     </ul>
